# berio

./: .gitignore  .gitmodules  AUTHORS  Makecache  Makefile.am  README.md  TODO  TODO.md  WIP.txt  berio.pc  berio.pc.in  configure.ac  debian.am  doxygen.cfg
.develop/: gdb-bertree.sh  git-clean.sh
.develop/debug/: prim-boolean.prt.txt  production-signing-ca-addons-mozilla-org.ber.txt  production-signing-ca-addons-mozilla-org.prt.txt
.trash/doc/: Makefile.am
.trash/testsuite/dertree.tests/: testcases.exp
.trash/testsuite/dertree.tests/testcases/: incomplete.prt.txt
.trash/testsuite/lib/dertree/: derprint.h  dertree.cxx  main.cxx
.work/: work.md
doc/: Doxyfile.in  Makefile.am  doxygen.cfg
doc/doxygen/: examples.dox  groups.dox  main.dox  manual.md  namespaces.dox
doc/doxygen/groups/: in-out.dox  tag-header-univnums.dox  tag-header.dox
include/: Makefile.am  doxygen.h
include/berio/: Makefile.am  b64.h  b64fstream.h  b64istream.h  b64ostream.h  b64sstream.h  bufoutput.h  deliminput.h  encoding.h  io.h  tag.h  types.h  univ.h
m4/: archive-update.sh  ax_dejagnu.m4  ax_enable_coverage.m4  dejagnu.m4  endebug.m4
src/: Makefile.am  b64.cxx  bufoutput.cxx  deliminput.cxx  octet.cxx  tagdecode.cxx  tagencode.cxx  tagheader.cxx
testsuite/: Makefile.am  global-conf.exp
testsuite/bertree.tests/: Makefile.am  constr-def.exp  constr-indef-.exp  constr-indef-01.prt.txt  constr-indef.exp  large-tag-number.exp  prim-boolean.exp  prim-octet-string.exp  testcases.exp
testsuite/bertree.tests/debug/: TODO.md  constr-def.ber.txt  constr-def.prt.txt
testsuite/bertree.tests/tmp/: constr-indef.prt.txt  google-cert.ber.txt  google-cert.prt.txt
testsuite/config/: Makefile.am
testsuite/dertree.tests/: Makefile.am  testcases.exp
testsuite/dertree.tests/testcases/: context-specific.prt.txt  eoc.prt.txt  gnu-cert.prt.txt  object-identifier.prt.txt
testsuite/examples.tests/: Makefile.am  is-eoc.exp  tag-decode.exp  tag-encode.exp  tag-shape.exp  tag-sizeof.exp
testsuite/lib/: Makefile.am  bertree.exp  dertree.exp  examples.exp  unit.exp
testsuite/lib/bertree/: Makefile.am  berbitstr.h  berboolean.h  bercontent.h  berformat.h  berinteger.h  berlabel.cxx  berlabel.h  berlevel.cxx  berlevel.h  beroctetstr.h  beroid.h  berprint.cxx  berprint.h  berprintstr.h  berscan.h  bertree  bertree.cxx  bertree.h  main.cxx  printer.cxx  scanner.cxx  tokenmatch.h  treedefin.cxx  treelabel.cxx  treelevel.cxx
testsuite/lib/dertree/: Makefile.am  derformat.h  derprint.h  derscan.h  dertree.cxx  dertree.h  main.cxx  printer.cxx  scanner.cxx  treelabel.cxx  treelevel.cxx  treeprim.cxx
testsuite/lib/examples/: .gitignore  Makefile.am  example-tag-sizeof  is-eoc.cxx  tag-decode.cxx  tag-encode.cxx  tag-shape.cxx  tag-sizeof.cxx
testsuite/lib/unit/: .gitignore  Makefile.am  arrayio.h  berdecode  berdecode.cxx  test-io.cxx  test-tag.cxx  test-type-boolean.cxx  testio.h  tstub.h
testsuite/unit.tests/: Makefile.am  io.exp  tag.exp  type-boolean.exp  unit.exp
trash/testsuite/dertree.tests/testcases/: gnu-cert.der.txt
trash/testsuite/lib/dertree/: dertree.h
