EXTRA_DIST = \
  testcases.exp \
  testcases/empty.ber.txt \
  testcases/empty.prt.txt \
  testcases/eoc.ber.txt \
  testcases/eoc.prt.txt \
  testcases/google-cert.ber.txt \
  testcases/google-cert.prt.txt \
  testcases/wikipedia-cert.ber.txt \
  testcases/wikipedia-cert.prt.txt \
  testcases/yahoo-cert.ber.txt \
  testcases/yahoo-cert.prt.txt
