noinst_PROGRAMS = \
  bertree

bertree_CPPFLAGS = \
  -I$(top_srcdir)/include

bertree_LDADD = \
  $(top_srcdir)/src/libberio.la

bertree_SOURCES = \
  berbitstr.h \
  berboolean.h \
  bercontent.h \
  berinteger.h \
  berlabel.h \
  berlevel.h \
  beroctetstr.h \
  beroid.h \
  berprint.cxx \
  berprint.h \
  berprintstr.h \
  berscan.h \
  bertree.cxx \
  main.cxx \
  tokenmatch.h
  
CLEANFILES = $(AX_ENABLE_COVERAGE_CLEANFILES)
